--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,9 +4,5 @@ author: GreenedDev
 main: net.multylands.plugins.ArenaProtector
 api-version: '1.20'
 commands:
-  disablearenaprotection:
-    aliases:
-      - disableprotectionarena
-  reloadarenaprotection:
-    aliases:
-      - reloadprotectionarena
+  arenaprotector:
+    description: "the main command of arenaprotector"
