--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,8 @@ version: '${version}'
 author: GreenedDev
 main: net.multylands.plugins.ArenaProtector
 api-version: '1.20'
+softdepend:
+  - Multiverse-Core
 commands:
   arenaprotector:
     description: "the main command of arenaprotector"
